fix: Better alignement

--- a/src/drive/web/modules/drive/Toolbar/components/styles.styl
+++ b/src/drive/web/modules/drive/Toolbar/components/styles.styl
@@ -45,11 +45,16 @@ is not well centered. So I can't just rem(16) ... */
 .grid-item-title {
     margin-top rem(19)
     }
+.grid-item__selected__without_label {
+    padding-top rem(16)
+    }
 .grid-item__selected {
     padding-top rem(12)
     }
+
 .grid-item-theme {
     font-size rem(12)
+    padding-top rem(4)
     }
 .grid-item-label {
     font-size rem(10)
